Add posts and validation
