# routes/posts.js
@@ -1,7 +1,7 @@
 const express = require('express');
 const router = express.Router();
 
-const post = require('../models/post');
+const Posts = require('../models/post');
 
 const verifyToken = require('../validations/verifyToken.js')
 
@@ -12,8 +12,91 @@ router.get('/', async (req, res) => {
        #swagger.summary = 'Get all posts'
        #swagger.description = 'Get all the posts from the collection'
     */
-    console.log('Posts');
-    res.status(200).send();
+    const posts = await Posts.find()
+                             .populate('owner', 'username')
+                             .populate({
+                                path: 'comments.user',
+                                select: 'username -_id'
+                             })
+                             .lean()
+                             .exec();
+    if(!posts){
+        return req.status(404).json({ error: 'No posts found' })
+    }
+
+    posts.forEach(post => {
+        post.commentsCount = post.comments.length;
+        post.comments = post.comments.map(comment => {
+            return {
+                _id: comment._id,
+                comment: comment.comment,
+                user: comment.user.username,
+                timestamp: comment.timestamp
+            }
+        })
+    })
+
+    res.status(200).json(posts);
+});
+
+router.get('/:topic', async (req, res) => {
+    /*
+       #swagger.tags = ['Posts']
+       #swagger.path = '/api/posts/{topic}'
+       #swagger.summary = 'Get all posts for a specific topic'
+       #swagger.description = 'Get all the posts from the collection'
+       #swagger.parameters['topic'] = { description: 'This is the topic to filter the posts from the collection' }
+    */
+    const posts = await Posts.find({ topic: req.params.topic })
+                             .populate('owner', 'username')
+                             .populate({
+                                path: 'comments.user',
+                                select: 'username -_id'
+                             })
+                             .lean()
+                             .exec();
+    if(!posts){
+        return req.status(404).json({ error: 'No posts found' })
+    }
+
+    posts.forEach(post => {
+        post.commentsCount = post.comments.length;
+        post.comments = post.comments.map(comment => {
+            return {
+                _id: comment._id,
+                comment: comment.comment,
+                user: comment.user.username,
+                timestamp: comment.timestamp
+            }
+        })
+    })
+
+    res.status(200).json(posts);
+});
+
+router.post('/', async (req, res) => {
+    /*
+       #swagger.tags = ['Posts']
+       #swagger.path = '/api/posts'
+       #swagger.summary = 'Add a new post'
+       #swagger.description = 'Add a new post to the collection'
+    */
+    
+    const expirationMinutes = Number(req.body.expirationTime);
+
+    // convert minutes to millisecond
+    const expirationTime = new Date(Date.now() + expirationMinutes * 60000);
+
+    const newPost = new Posts({
+        title: req.body.title,
+        body: req.body.body,
+        topic: req.body.topic,
+        owner: req.body._id,
+        expirationTime: expirationTime
+    });
+
+    const savedPost = await newPost.save();
+    res.status(201).json(savedPost);
 })
 
 module.exports = router;
